도메인 모듈에 대한 테스트 코드 작성